--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+Next steps:
+0. Handle running out of power plants.
+1. Make sure step 2 works correctly.
+2. Make step 3 work so that dumb AI can complete a game.
+
+
 Solve PowerGrid using maths
 
 
