--- a/README
+++ b/README
@@ -1,9 +1,8 @@
 Next steps:
 1. Confirm step detection works correctly.
-    a. play a real two player game with sorted deck
-    b. have specific rules to govern the play
-    c. record some data over the course of the game (money per round?)
-    d. use data to compare against full game test.
+    a. use data to compare against full game test.
+    b. get the entire test run to pass (monkey patch step 3 pp shuffle)
+    c. figure out why step 3 failed if b wasnt at fault
 2. Fix AIs to check for SupplyErrors when buying
 3. Make an AI that will beat BasicAI
 
